--- a/src/app/components/activate-email/activate-email.component.html
+++ b/src/app/components/activate-email/activate-email.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title><h1 class="hovere">Didn't recieve an activation email?</h1></mat-card-title>
-    <mat-card-subtitle>Enter you college Id to recieve an email again. Remember do not request before 5 minutes when you registered. Email server might be slow as we are using free service.</mat-card-subtitle>
+    <mat-card-subtitle>Enter you college Id to recieve an email again. Please wait for 5 minutes after registration. Email server might be slow as we are using a free service.</mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content>
