--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title><h1 class="hovere">Forgot your password?</h1></mat-card-title>
-    <mat-card-subtitle>Don't worry, just enter you college Id to recieve an email. Remember wait for 5 minutes after before you request again. Somethimes email server is slow because we are using free service.</mat-card-subtitle>
+    <mat-card-subtitle>Don't worry, just enter you college Id to recieve an email. Remember, wait for 5 minutes before you request again. Sometimes the email server is slow because we are using a free service.</mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content>
